--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,6 +1,15 @@
 en:
   view_detail: "View detail"
   add_to_cart: "Add to cart"
+  create_fail: "Create fail"
+  comment: "Comment"
+  search: "Search"
+  comment_placeholer: "Comment in here ..."
+  require_login_comment: "Please login to comment"
+  home: "Home"
+  comment_section: "Comment section"
+  sold_out: "Sold out"
+  product: "Products"
   categories: "Categories"
   add_to_wishlist: "Add to wishlist"
   show_friends: "Show it to your friends"
