[user] login facebook

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -8,6 +8,9 @@ en:
       welcome: "Welcome to Our Store"
       hot_products: "HOT PRODUCTS"
       lastest_products: "LASTEST PRODUCTS"
+  login_facebook_success: "Signed in by Facebook successfully"
+  login_facebook_error: "Error while signing in by Facebook, please register!"
+  login_facebook: "Sign in with Facebook"
   view_detail: "View detail"
   add_to_cart: "Add to cart"
   create_fail: "Create fail"
