--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,6 +20,12 @@ en:
   comment_placeholer: "Comment in here ..."
   require_login_comment: "Please login to comment"
   home: "Home"
+  update: "Update"
+  delete: "Delete"
+  comment_placeholer: "Comment in here ..."
+  require_login_comment: "Please login to comment"
+  home: "Home"
+  confirm_delete: "Are you sure to delete?"
   comment_section: "Comment section"
   sold_out: "Sold out"
   product: "Products"
@@ -29,6 +35,19 @@ en:
   same_product: "You may also like these products"
   detail_product: "Detail product"
   cant_find_product: "Cannot find product"
+  carts:
+    index:
+      empty_cart: "Your cart empty!"
+      checkout: "Check out"
+      continue_shopping: "Continue shopping"
+      title: "Shopping Cart"
+  static_pages:
+    home:
+      home: "Home"
+      sign_up: "Sign up now!"
+      welcome: "Welcome to Our Store"
+      hot_products: "HOT PRODUCTS"
+      lastest_products: "LASTEST PRODUCTS"
   layouts:
     header:
       login: "Login"
